--- a/A_dbms/templates/dbms/report/summary/balance.html
+++ b/A_dbms/templates/dbms/report/summary/balance.html
@@ -11,5 +11,5 @@
             在保项目分类（按项目）</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_top_custom'  c_typ=11 t_typ=7 %}">
-            客户分析</a></label>
+            客户占比分析</a></label>
 </div>
