--- a/A_dbms/templates/dbms/report/list/article-table.html
+++ b/A_dbms/templates/dbms/report/list/article-table.html
@@ -2,41 +2,48 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>客户名称({{ custom_acount }})</th>
-            <th>行业</th>
-            <th>区域</th>
-            <th>管户经理</th>
+            <th>项目编号({{ article_acount }})</th>
+            <th>客户</th>
+            <th>项目金额</th>
+            <th>期限</th>
+            <th>业务品种</th>
+            <th>项目经理</th>
+            <th>项目助理</th>
             <th>风控专员</th>
-            <th>授信总额</th>
+            <th>提交日期</th>
+            {#            <th>反馈日期</th>#}
+            {#            <th>加权通知金额</th>#}
+            <th>放款金额</th>
+            <th>还款金额</th>
             <th>在保余额</th>
-            <th>流贷余额</th>
-            <th>承兑余额</th>
-            <th>保函余额</th>
-            <th>委贷余额</th>
-            <th>类型</th>
-            <th>风险分类</th>
-            <th>计划时间</th>
-            <th>保后状态</th>
+            {#            <th>风险分类</th>#}
+            <th>项目状态</th>
         </tr>
         </thead>
         <tbody>
-        {% for custom in custom_groups %}
+        {% for article in article_groups %}
             <tr>
-                <td><a href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.short_name }}</a></td>
-                <td>{{ custom.idustry.name }}</td>
-                <td>{{ custom.district.name }}</td>
-                <td align="right">{{ custom.managementor }}</td>
-                <td align="right">{{ custom.controler }}</td>
-                <td align="right">{{ custom.credit_amount }}</td>
-                <td align="right">{{ custom.amount }}</td>
-                <td align="right">{{ custom.custom_flow }}</td>
-                <td align="right">{{ custom.custom_accept }}</td>
-                <td align="right">{{ custom.custom_back }}</td>
-                <td align="right">{{ custom.entrusted_loan }}</td>
-                <td>{{ custom.get_custom_typ_display }}</td>
-                <td>{{ custom.get_classification_display }}</td>
-                <td>{{ custom.review_plan_date|default_if_none:"" }}</td>
-                <td>{{ custom.get_review_state_display }}</td>
+                <td>
+                    <a href="{% url 'dbms:article_scan' article_id=article.id %}">
+                        {{ article.article_num }}
+                    </a>
+                </td>
+                <td>{{ article.custom.short_name }}</td>
+                <td align="right">{{ article.amount }}</td>
+                <td align="right">{{ article.credit_term }}</td>
+                <td>{{ article.product }}</td>
+                <td>{{ article.director.name }}</td>
+                <td>{{ article.assistant.name }}</td>
+                <td>{{ article.control.name }}</td>
+                <td>{{ article.build_date }}</td>
+                {#                <td>{{ article.article_date|default_if_none:"" }}</td>#}
+                {#                <td align="right">{{ article.article_notify_sum }}</td>#}
+                <td align="right">{{ article.article_provide_sum }}</td>
+                <td align="right">{{ article.article_repayment_sum }}</td>
+                <td align="right">{{ article.article_balance }}</td>
+                {#                <td>{{ article.get_classification_display }}</td>#}
+                {#方式一：推荐#}
+                <td>{{ article.get_article_state_display }}</td>
             </tr>
         {% endfor %}
         </tbody>
