--- a/A_dbms/templates/dbms/provide/provide-agree-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-scan.html
@@ -12,6 +12,9 @@
         {% include 'dbms/provide/modl/ascertain-add-mod.html' %}
         {% include 'dbms/provide/modl/agree-sign-add-mod.html' %}
         {% include 'dbms/provide/modl/counter-sign-add-mod.html' %}
+
+        {% include 'dbms/provide/modl/agree-change-mod.html' %}
+
     </div>
 {% endblock %}
 
@@ -22,4 +25,7 @@
     {% include 'dbms/provide/extra/js-ascertain-add.html' %}
     {% include 'dbms/provide/extra/js-counter-sign-add.html' %}
     {% include 'dbms/provide/extra/js-agree-sign-add.html' %}
+
+    {% include 'dbms/provide/extra/js-agree-change.html' %}
+
 {% endblock %}
