--- a/A_dbms/templates/dbms/report/balance_custom/top-custom.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-custom.html
@@ -1,37 +1,37 @@
 <tr>
-    <td>合计</td>
-    <td align="right">{{ c_custom_count }}</td>
-    <td align="right">{{ c_credit|floatformat:2 }}</td>
-    <td align="right">{{ c_flow|floatformat:2 }}</td>
-    <td align="right">{{ c_accept|floatformat:2 }}</td>
-    <td align="right">{{ c_back|floatformat:2 }}</td>
-    <td align="right">{{ c_entrusted|floatformat:2 }}</td>
+    <td style="padding: 0">合计</td>
+    <td style="padding: 0" align="right">{{ c_custom_count }}</td>
+    <td style="padding: 0" align="right">{{ c_credit|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_flow|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_accept|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_back|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_entrusted|floatformat:2 }}</td>
     {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
-    <td align="right">{{ c_amount|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_amount|floatformat:2 }}</td>
 </tr>
 
 <tr>
-    <td>总计</td>
-    <td align="right">{{ t_custom_count }}</td>
-    <td align="right">{{ t_credit|floatformat:2 }}</td>
-    <td align="right">{{ t_flow|floatformat:2 }}</td>
-    <td align="right">{{ t_accept|floatformat:2 }}</td>
-    <td align="right">{{ t_back|floatformat:2 }}</td>
-    <td align="right">{{ t_entrusted|floatformat:2 }}</td>
+    <td style="padding: 0">总计</td>
+    <td style="padding: 0" align="right">{{ t_custom_count }}</td>
+    <td style="padding: 0" align="right">{{ t_credit|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_flow|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_accept|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_back|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_entrusted|floatformat:2 }}</td>
     {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
-    <td align="right">{{ t_amount|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_amount|floatformat:2 }}</td>
 </tr>
 
 <tr>
-    <td>占比（%）</td>
-    <td align="right">{{ r_custom_count }}</td>
-    <td align="right">{{ r_credit }}</td>
-    <td align="right">{{ r_flow }}</td>
-    <td align="right">{{ r_accept }}</td>
-    <td align="right">{{ r_back }}</td>
-    <td align="right">{{ r_entrusted }}</td>
+    <td style="padding: 0">占比（%）</td>
+    <td style="padding: 0" align="right">{{ r_custom_count }}</td>
+    <td style="padding: 0" align="right">{{ r_credit }}</td>
+    <td style="padding: 0" align="right">{{ r_flow }}</td>
+    <td style="padding: 0" align="right">{{ r_accept }}</td>
+    <td style="padding: 0" align="right">{{ r_back }}</td>
+    <td style="padding: 0" align="right">{{ r_entrusted }}</td>
     {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
-    <td align="right">{{ r_amount }}</td>
+    <td style="padding: 0" align="right">{{ r_amount }}</td>
 </tr>
 
 
