--- a/A_dbms/templates/dbms/report/balance_dun/balance-class-stage.html
+++ b/A_dbms/templates/dbms/report/balance_dun/balance-class-stage.html
@@ -11,17 +11,17 @@
         <tbody>
         <tr>
             <td>代偿</td>
-            <td align="right">{{ compensatory_count|floatformat:2 }}</td>
+            <td align="right">{{ compensatory_count }}</td>
             <td align="right">{{ compensatory_amount|floatformat:2 }}</td>
         </tr>
         <tr>
             <td>追偿费用</td>
-            <td align="right">{{ charge_count|floatformat:2 }}</td>
+            <td align="right">{{ charge_count }}</td>
             <td align="right">{{ charge_amount|floatformat:2 }}</td>
         </tr>
         <tr>
             <td>追偿回款</td>
-            <td align="right">{{ retrieve_count|floatformat:2 }}</td>
+            <td align="right">{{ retrieve_count }}</td>
             <td align="right">{{ retrieve_amount|floatformat:2 }}</td>
         </tr>
         </tbody>
