--- a/A_dbms/templates/dbms/report/balance_article/balance-class-idustry.html
+++ b/A_dbms/templates/dbms/report/balance_article/balance-class-idustry.html
@@ -19,7 +19,12 @@
         {% for item in article_balance_idustry %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>{{ item.custom__idustry__name }}</td>
+                <td>
+                    <a target="_blank"
+                       href="{% url 'dbms:report_article_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ item.custom__idustry__name }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                        {{ item.custom__idustry__name }}
+                    </a>
+                </td>
                 <td align="right">{{ item.con }}</td>
                 <td align="right">{{ item.sum_renewal|floatformat:2 }}</td>
                 <td align="right">{{ item.sum_augment|floatformat:2 }}</td>
