--- a/A_dbms/templates/dbms/report/list/article-table.html
+++ b/A_dbms/templates/dbms/report/list/article-table.html
@@ -10,7 +10,7 @@
             <th>项目经理</th>
             <th>项目助理</th>
             <th>风控专员</th>
-            <th>提交日期</th>
+            <th>纪要编号</th>
             {#            <th>反馈日期</th>#}
             {#            <th>加权通知金额</th>#}
             <th>放款金额</th>
@@ -35,7 +35,7 @@
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
-                <td>{{ article.build_date }}</td>
+                <td>{{ article.summary_num }}</td>
                 {#                <td>{{ article.article_date|default_if_none:"" }}</td>#}
                 {#                <td align="right">{{ article.article_notify_sum }}</td>#}
                 <td align="right">{{ article.article_provide_sum }}</td>
