--- a/A_dbms/templates/dbms/provide/provide-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-scan.html
@@ -13,6 +13,9 @@
         {% include 'dbms/provide/modl/track-add-mod.html' %}
         {% include 'dbms/provide/modl/track-del-mod.html' %}
         {% include 'dbms/dun/modl/compensatory-add-mod.html' %}
+
+        {% include 'dbms/provide/modl/provide-state-change-mod.html' %}
+
     </div>
 {% endblock %}
 
@@ -23,4 +26,6 @@
     {% include 'dbms/provide/extra/js-track-add.html' %}
     {% include 'dbms/provide/extra/js-track-del.html' %}
     {% include 'dbms/dun/extra/js-compensatory-add.html' %}
+
+    {% include 'dbms/provide/extra/js-provide-state-change.html' %}
 {% endblock %}
