--- a/A_dbms/templates/dbms/report/balance_article/article-class.html
+++ b/A_dbms/templates/dbms/report/balance_article/article-class.html
@@ -1,11 +1,11 @@
 <tr>
-    <td colspan="2">合计</td>
-    <td align="right">{{ article_count }}</td>
-    <td align="right">{{ article_renewal|floatformat:2 }}</td>
-    <td align="right">{{ article_augment|floatformat:2 }}</td>
-    <td align="right">{{ article_amount|floatformat:2 }}</td>
-    <td align="right">{{ article_notify_sum|floatformat:2 }}</td>
-    <td align="right">{{ article_provide_sum|floatformat:2 }}</td>
-    <td align="right">{{ article_repayment_sum|floatformat:2 }}</td>
-    <td align="right">{{ article_balance|floatformat:2 }}</td>
+    <td style="padding: 0" colspan="2">合计</td>
+    <td style="padding: 0" align="right">{{ article_count }}</td>
+    <td style="padding: 0" align="right">{{ article_renewal|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ article_augment|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ article_amount|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ article_notify_sum|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ article_provide_sum|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ article_repayment_sum|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ article_balance|floatformat:2 }}</td>
 </tr>
