--- a/A_dbms/templates/dbms/report/balance_article/balance-class-district.html
+++ b/A_dbms/templates/dbms/report/balance_article/balance-class-district.html
@@ -17,23 +17,22 @@
         </thead>
         <tbody>
         {% for item in article_balance_district %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-
-                <td>
+            <tr style="padding: 0">
+                <td style="padding: 0">{{ forloop.counter }}</td>
+                <td style="padding: 0">
                     <a target="_blank"
                        href="{% url 'dbms:report_article_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ item.custom__district__name }}&tf={{ tf_r }}&tl={{ tl_r }}">
                         {{ item.custom__district__name }}
                     </a>
                 </td>
-                <td align="right">{{ item.con }}</td>
-                <td align="right">{{ item.sum_renewal|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_augment|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_amount|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_notify|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_provide|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_repayment|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_balance|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.con }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_renewal|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_augment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_amount|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_notify|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_provide|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_repayment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_balance|floatformat:2 }}</td>
             </tr>
         {% endfor %}
         {% include 'dbms/report/balance_article/article-class.html' %}
