--- a/A_dbms/templates/dbms/report/balance_custom/top-class.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-class.html
@@ -1,9 +1,9 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
         {% if t_typ == 99 %}
-            <caption>{{ c_typ_c }}金额{{ screen_value|floatformat:0 }}元以上（含）客户及占比</caption>
+            <caption>{{ c_typ_c }}金额{{ screen_value|floatformat:0 }}元以上（含）客户及占比统计表</caption>
         {% else %}
-            <caption>{{ t_typ_t }}{{ c_typ_c }}客户及占比</caption>
+            <caption>{{ t_typ_t }}{{ c_typ_c }}客户及占比统计表</caption>
         {% endif %}
         <thead>
         <tr style="text-align: center;padding: 0">
