--- a/A_dbms/templates/dbms/report/list/article-table.html
+++ b/A_dbms/templates/dbms/report/list/article-table.html
@@ -1,5 +1,10 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
+        {% if t_typ_dic_this == '在保' %}
+            <caption>在保项目分类明细表（按{{ c_typ_dic_this }}：{{ ss_value }}）</caption>
+        {% else %}
+            <caption>项目分类明细表（按{{ c_typ_dic_this }}：{{ ss_value }}）（{{ t_typ_dic_this }}：{{ tf_r }}至{{ tl_r }}）</caption>
+        {% endif %}
         <thead>
         <tr style="text-align: center">
             <th>项目编号({{ article_acount }})</th>
@@ -22,30 +27,44 @@
         </thead>
         <tbody>
         {% for article in article_groups %}
-            <tr>
-                <td>
-                    <a href="{% url 'dbms:article_scan' article_id=article.id %}">
+            <tr style="padding: 0">
+                <td style="padding: 0">
+                    <a target="_blank" href="{% url 'dbms:article_scan' article_id=article.id %}">
                         {{ article.article_num }}
                     </a>
                 </td>
-                <td>{{ article.custom.short_name }}</td>
-                <td align="right">{{ article.amount }}</td>
-                <td align="right">{{ article.credit_term }}</td>
-                <td>{{ article.product }}</td>
-                <td>{{ article.director.name }}</td>
-                <td>{{ article.assistant.name }}</td>
-                <td>{{ article.control.name }}</td>
-                <td>{{ article.summary_num }}</td>
+                <td style="padding: 0">{{ article.custom.short_name }}</td>
+                <td style="padding: 0" align="right">{{ article.amount }}</td>
+                <td style="padding: 0" align="right">{{ article.credit_term }}</td>
+                <td style="padding: 0">{{ article.product }}</td>
+                <td style="padding: 0">{{ article.director.name }}</td>
+                <td style="padding: 0">{{ article.assistant.name }}</td>
+                <td style="padding: 0">{{ article.control.name }}</td>
+                <td style="padding: 0">{{ article.summary_num }}</td>
                 {#                <td>{{ article.article_date|default_if_none:"" }}</td>#}
                 {#                <td align="right">{{ article.article_notify_sum }}</td>#}
-                <td align="right">{{ article.article_provide_sum }}</td>
-                <td align="right">{{ article.article_repayment_sum }}</td>
-                <td align="right">{{ article.article_balance }}</td>
+                <td style="padding: 0" align="right">{{ article.article_provide_sum }}</td>
+                <td style="padding: 0" align="right">{{ article.article_repayment_sum }}</td>
+                <td style="padding: 0" align="right">{{ article.article_balance }}</td>
                 {#                <td>{{ article.get_classification_display }}</td>#}
                 {#方式一：推荐#}
-                <td>{{ article.get_article_state_display }}</td>
+                <td style="padding: 0">{{ article.get_article_state_display }}</td>
             </tr>
         {% endfor %}
+        <tr>
+            <td colspan="2">合计</td>
+            <td>{{ article_amount_tot|floatformat:2 }}</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>{{ article_provide_tot|floatformat:2 }}</td>
+            <td>{{ article_repayment_tot|floatformat:2 }}</td>
+            <td>{{ article_balance_tot|floatformat:2 }}</td>
+            <td></td>
+        </tr>
         </tbody>
     </table>
 </div>
