--- a/A_dbms/templates/dbms/report/list/custom-table.html
+++ b/A_dbms/templates/dbms/report/list/custom-table.html
@@ -1,10 +1,11 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
+        <caption>{{ t_typ_this }}客户分类明细表（按{{ c_typ_this }}：{{ ss_value }}）</caption>
         <thead>
         <tr style="text-align: center">
             <th>客户名称({{ custom_acount }})</th>
             <th>行业</th>
-            <th>区域</th>
+            {#            <th>区域</th>#}
             <th>管户经理</th>
             <th>风控专员</th>
             <th>授信总额</th>
@@ -15,30 +16,47 @@
             <th>委贷余额</th>
             <th>类型</th>
             <th>风险分类</th>
-            <th>计划时间</th>
-            <th>保后状态</th>
+            {#            <th>计划时间</th>#}
+            {#            <th>保后状态</th>#}
         </tr>
         </thead>
         <tbody>
         {% for custom in custom_groups %}
-            <tr>
-                <td><a href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.short_name }}</a></td>
-                <td>{{ custom.idustry.name }}</td>
-                <td>{{ custom.district.name }}</td>
-                <td align="right">{{ custom.managementor }}</td>
-                <td align="right">{{ custom.controler }}</td>
-                <td align="right">{{ custom.credit_amount }}</td>
-                <td align="right">{{ custom.amount }}</td>
-                <td align="right">{{ custom.custom_flow }}</td>
-                <td align="right">{{ custom.custom_accept }}</td>
-                <td align="right">{{ custom.custom_back }}</td>
-                <td align="right">{{ custom.entrusted_loan }}</td>
-                <td>{{ custom.get_custom_typ_display }}</td>
-                <td>{{ custom.get_classification_display }}</td>
-                <td>{{ custom.review_plan_date|default_if_none:"" }}</td>
-                <td>{{ custom.get_review_state_display }}</td>
+            <tr style="padding: 0">
+                <td style="padding: 0">
+                    <a target="_blank"
+                       href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.short_name }}</a>
+                </td>
+                <td style="padding: 0">{{ custom.idustry.name }}</td>
+                {#                <td style="padding: 0">{{ custom.district.name }}</td>#}
+                <td style="padding: 0" align="right">{{ custom.managementor }}</td>
+                <td style="padding: 0" align="right">{{ custom.controler }}</td>
+                <td style="padding: 0" align="right">{{ custom.credit_amount }}</td>
+                <td style="padding: 0" align="right">{{ custom.amount }}</td>
+                <td style="padding: 0" align="right">{{ custom.custom_flow }}</td>
+                <td style="padding: 0" align="right">{{ custom.custom_accept }}</td>
+                <td style="padding: 0" align="right">{{ custom.custom_back }}</td>
+                <td style="padding: 0" align="right">{{ custom.entrusted_loan }}</td>
+                <td style="padding: 0">{{ custom.get_custom_typ_display }}</td>
+                <td style="padding: 0">{{ custom.get_classification_display }}</td>
+                {#                <td style="padding: 0">{{ custom.review_plan_date|default_if_none:"" }}</td>#}
+                {#                <td style="padding: 0">{{ custom.get_review_state_display }}</td>#}
             </tr>
         {% endfor %}
+
         </tbody>
+        <tfoot>
+        <tr>
+            <td colspan="4">合计(户均)(万)</td>
+            <td align="right">{{ custom_credit_tot_w|floatformat:0 }}({{ custom_credit_average|floatformat:0 }})</td>
+            <td align="right">{{ custom_acount_tot_w|floatformat:0 }}({{ custom_acount_average|floatformat:0 }})</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        </tfoot>
     </table>
 </div>
