--- a/A_dbms/templates/dbms/provide/provide_scan/provide-summry.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-summry.html
@@ -5,6 +5,7 @@
             <a class="btn btn-primary btn-sm " id="trackPlanB">跟踪计划 </a>
             <a class="btn btn-primary btn-sm " id="repaymentB">还款 </a>
             <a class="btn btn-primary btn-sm " id="compensatoryB">代偿 </a>
+            <a class="btn btn-primary btn-sm " id="provideChangeB">变更状态 </a>
         </label>
     </div>
 
