--- a/A_dbms/templates/dbms/report/balance_article/balance-class-stage.html
+++ b/A_dbms/templates/dbms/report/balance_article/balance-class-stage.html
@@ -17,11 +17,11 @@
         </thead>
         <tbody>
         {% for item in article_balance_stage %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
+            <tr style="padding: 0">
+                <td style="padding: 0">{{ forloop.counter }}</td>
                 {#            ARTICLE_STATE_LIST = [(1, '待反馈'), (2, '已反馈'), (3, '待上会'), (4, '已上会'), (5, '已签批'),#}
                 {#                          (51, '已放款'), (52, '已放完'), (55, '已解保'), (61, '待变更'), (99, '已注销')]#}
-                <td>
+                <td style="padding: 0">
                     {% if item.article_state == 1 %}
                         <a target="_blank"
                            href="{% url 'dbms:report_article_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ article_state_dic.1 }}&tf={{ tf_r }}&tl={{ tl_r }}">
@@ -75,14 +75,14 @@
 
                     {% endif %}
                 </td>
-                <td align="right">{{ item.con }}</td>
-                <td align="right">{{ item.sum_renewal|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_augment|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_amount|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_notify|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_provide|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_repayment|floatformat:2 }}</td>
-                <td align="right">{{ item.sum_balance|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.con }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_renewal|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_augment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_amount|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_notify|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_provide|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_repayment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ item.sum_balance|floatformat:2 }}</td>
             </tr>
         {% endfor %}
         {% include 'dbms/report/balance_article/article-class.html' %}
