--- a/A_dbms/templates/dbms/report/balance_custom/article-class.html
+++ b/A_dbms/templates/dbms/report/balance_custom/article-class.html
@@ -1,23 +1,23 @@
-<tr>
-    <td colspan="2">合计</td>
-    <td align="right">{{ article_count }}</td>
-    <td align="right">{{ c_credit|floatformat:2 }}</td>
-    <td align="right">{{ c_flow|floatformat:2 }}</td>
-    <td align="right">{{ c_accept|floatformat:2 }}</td>
-    <td align="right">{{ c_back|floatformat:2 }}</td>
-    <td align="right">{{ c_entrusted|floatformat:2 }}</td>
+<tr style="padding: 0;">
+    <td style="padding: 0;" colspan="2">合计</td>
+    <td style="padding: 0;" align="right">{{ article_count }}</td>
+    <td style="padding: 0;" align="right">{{ c_credit|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ c_flow|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ c_accept|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ c_back|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ c_entrusted|floatformat:2 }}</td>
 {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
-    <td align="right">{{ c_amount|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ c_amount|floatformat:2 }}</td>
 </tr>
 
-<tr>
-    <td colspan="2">单户金额</td>
-    <td align="right"></td>
-    <td align="right">{{ s_credit|floatformat:2 }}</td>
-    <td align="right">{{ s_flow|floatformat:2 }}</td>
-    <td align="right">{{ s_accept|floatformat:2 }}</td>
-    <td align="right">{{ s_back|floatformat:2 }}</td>
-    <td align="right">{{ s_entrusted|floatformat:2 }}</td>
+<tr style="padding: 0;">
+    <td style="padding: 0;" colspan="2">单户金额</td>
+    <td style="padding: 0;" align="right"></td>
+    <td style="padding: 0;" align="right">{{ s_credit|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ s_flow|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ s_accept|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ s_back|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ s_entrusted|floatformat:2 }}</td>
 {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
-    <td align="right">{{ s_amount|floatformat:2 }}</td>
+    <td style="padding: 0;" align="right">{{ s_amount|floatformat:2 }}</td>
 </tr>
